// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for search form parts 1`] = `
<div
  className="nights"
>
  <div>
    <div
      className="col"
    >
      <input
        checked={true}
        className=""
        id="input_0"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_0"
      >
        1
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_1"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_1"
      >
        2
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_2"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_2"
      >
        3
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_3"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_3"
      >
        4
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_4"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_4"
      >
        5
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_5"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_5"
      >
        6
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_6"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_6"
      >
        7
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_7"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_7"
      >
        8
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_8"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_8"
      >
        9
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_9"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_9"
      >
        10
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_10"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_10"
      >
        11
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_11"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_11"
      >
        12
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_12"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_12"
      >
        13
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_13"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_13"
      >
        14
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_14"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_14"
      >
        15
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_15"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_15"
      >
        16
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_16"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_16"
      >
        17
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_17"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_17"
      >
        18
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_18"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_18"
      >
        19
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_19"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_19"
      >
        20
      </label>
    </div>
  </div>
  <div>
    <div
      className="col"
    >
      <input
        checked={false}
        className=""
        id="input_20"
        name="nights"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="black-text"
        htmlFor="input_20"
      >
        21
      </label>
    </div>
  </div>
</div>
`;

exports[`Snapshot test for search form parts 2`] = `
<div>
  <div
    className="col input-field s6"
  >
    <i
      className="material-icons prefix"
    >
      person
    </i>
    <label
      className="active black-text"
      htmlFor="input_21"
    >
      Взрослых
    </label>
    <select
      checked={false}
      className=""
      icon="person"
      id="input_21"
      name="adults"
      onChange={[Function]}
    >
      <option
        selected={true}
        value={1}
      >
        1
         взрослый
      </option>
      <option
        selected={false}
        value={2}
      >
        2
         взрослый
      </option>
      <option
        selected={false}
        value={3}
      >
        3
         взрослый
      </option>
    </select>
  </div>
  <div
    className="col input-field s6"
  >
    <i
      className="material-icons prefix"
    >
      child_care
    </i>
    <label
      className="active black-text"
      htmlFor="input_22"
    >
      Детей
    </label>
    <select
      checked={false}
      className=""
      icon="child_care"
      id="input_22"
      name="children"
      onChange={[Function]}
    >
      <option
        selected={true}
        value={0}
      >
        0
         ребенок
      </option>
      <option
        selected={false}
        value={1}
      >
        1
         ребенок
      </option>
      <option
        selected={false}
        value={2}
      >
        2
         ребенок
      </option>
      <option
        selected={false}
        value={3}
      >
        3
         ребенок
      </option>
    </select>
  </div>
</div>
`;

exports[`Snapshot test for search form parts 3`] = `
<div>
  <div
    className="col input-field s6"
  >
    <input
      checked={false}
      className=""
      id="input_23"
      name="dateFrom"
      onChange={[Function]}
      placeholder="Заселение с"
      type="date"
      value=""
    />
  </div>
  <div
    className="col input-field s6"
  >
    <input
      checked={false}
      className=""
      id="input_24"
      name="dateTo"
      onChange={[Function]}
      placeholder="Заселение по"
      type="date"
      value=""
    />
  </div>
</div>
`;

exports[`Snapshot test for search form parts 4`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col s8"
    >
      <h5>
        Список отелей
      </h5>
      <ul
        className="collapsible"
        data-collapsible="expandable"
      >
        <li
          className="active"
        >
          <div
            className="collapsible-header active"
            onClick={[Function]}
          >
            <i
              className="material-icons"
            >
              location_on
            </i>
            Минская область
          </div>
          <div
            className="collapsible-body"
          >
            <div
              className="hotelList"
            >
              <div
                className="col"
              >
                <input
                  checked={false}
                  className=""
                  id="input_25"
                  name="mainList"
                  onChange={[Function]}
                  type="checkbox"
                  value="5b06859e5089ec123b9e668c"
                />
                <label
                  className="active black-text"
                  htmlFor="input_25"
                >
                  Берестье
                </label>
              </div>
              <p>
                санаторий
              </p>
              <p>
                 
                <i
                  className="material-icons"
                >
                  star
                </i>
                 
                2
              </p>
            </div>
            <div
              className="hotelList"
            >
              <div
                className="col"
              >
                <input
                  checked={false}
                  className=""
                  id="input_26"
                  name="mainList"
                  onChange={[Function]}
                  type="checkbox"
                  value="5b06859e5089ec123b9e668f"
                />
                <label
                  className="active black-text"
                  htmlFor="input_26"
                >
                  Белая вежа
                </label>
              </div>
              <p>
                санаторий
              </p>
              <p>
                 
                <i
                  className="material-icons"
                >
                  star
                </i>
                 
                3
              </p>
            </div>
          </div>
        </li>
      </ul>
      <ul
        className="collapsible"
        data-collapsible="expandable"
      >
        <li
          className="active"
        >
          <div
            className="collapsible-header active"
            onClick={[Function]}
          >
            <i
              className="material-icons"
            >
              location_on
            </i>
            Витебская область
          </div>
          <div
            className="collapsible-body"
          />
        </li>
      </ul>
    </div>
    <div
      className="col s4"
    >
      <div
        className="left"
      >
        <h5>
          Выбранные отели
        </h5>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot test for search form parts 5`] = `
<div
  className="col input-field s12"
>
  <i
    className="material-icons prefix"
  >
    star
  </i>
  <label
    className="active"
    htmlFor="input_27"
  >
    Категория отеля
  </label>
  <select
    checked={false}
    className=""
    icon="star"
    id="input_27"
    name="starsType"
    onChange={[Function]}
  >
    <option
      value="Любой"
    >
      Любой
    </option>
    <option
      value="2"
    >
      2
    </option>
    <option
      value="3"
    >
      3
    </option>
    <option
      value="4"
    >
      4
    </option>
    <option
      value="5"
    >
      5
    </option>
  </select>
</div>
`;

exports[`Snapshot test for search form parts 6`] = `
<div>
   
  <div
    className="col input-field s12"
  >
    <i
      className="material-icons prefix"
    >
      free_breakfast
    </i>
    <label
      className="active"
      htmlFor="input_28"
    >
      Питание
    </label>
    <select
      checked={false}
      className=""
      icon="free_breakfast"
      id="input_28"
      name="foodType"
      onChange={[Function]}
    >
      <option
        selected={true}
        value="Any"
      >
        Любое
      </option>
      <option
        selected={false}
        value="AO"
      >
        Без питания
      </option>
      <option
        selected={false}
        value="BB"
      >
        Завтраки
      </option>
      <option
        selected={false}
        value="HB"
      >
        Завтрак и ужин
      </option>
      <option
        selected={false}
        value="FB"
      >
        Завтрак, обед и ужин
      </option>
      <option
        selected={false}
        value="ALL"
      >
        Все включено
      </option>
    </select>
  </div>
</div>
`;
